try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -68,8 +68,12 @@
     }
 }
 
+#navbar-main {
+    background-color: #505050;
+}
+
 #fun {
-    background-color: #7a7a7a;
+    background-color: #505050;
 }
 
 .fun {
